--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dummy Website</title>
+    <title>My Website</title>
     <style>
       /* CSS Styles */
       body {
@@ -49,10 +49,10 @@
 
     <main>
       <p>
-        This is a simple dummy website with HTML, CSS, and JavaScript all in one
+        This is a simple website with HTML, CSS, and JavaScript all in one
         file.
       </p>
-      <button class="button" onclick="showMessage()">Click Me!</button>
+      <button class="button" onclick="showMessage()">Click Here!</button>
     </main>
 
     <script>
